--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.guava-19.0.jar=E:\\NetBeans_JavaSE_8.0_Portable\\App\\netbeans\\java\\guava\\guava-19.0.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=E:\\NetBeans_JavaSE_8.0_Portable\\Data\\NetBeans\\Config\\8.0\\build.properties
